初始化仓库

--- a/.github/workflows/ImmortalWrt_1806_X86-64.yml
+++ b/.github/workflows/ImmortalWrt_1806_X86-64.yml
@@ -430,4 +430,4 @@ jobs:
           body: ${{ env.BUILD_DATE }}
           commit: ${{ env.CURRENT_BRANCH }}
           token: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: ${{ FIRMWARE_PATH }}/*
+          artifacts: ${{ env.FIRMWARE_PATH }}/*
