--- a/.github/workflows/ImmortalWrt_1806_X86-64.yml
+++ b/.github/workflows/ImmortalWrt_1806_X86-64.yml
@@ -398,11 +398,6 @@ jobs:
         run: |
           export BUILD_DATE=$(date +"%Y-%m-%d")
           echo "BUILD_DATE=$BUILD_DATE" >> $GITHUB_ENV
-          mkdir -p Packages
-          mv -f $OPENWRT_ROOT_PATH/bin/packages/*/*/*.ipk Packages
-          mv -f $OPENWRT_ROOT_PATH/bin/targets/*/*/packages/*.ipk Packages
-          tar -zcvf Packages.tar.gz Packages && rm -rf Packages
-          mv Package.tar.gz $OPENWRT_ROOT_PATH/bin/targets/$DEVICE_TARGET/$DEVICE_SUBTARGET/Package.tar.gz
           cd $OPENWRT_ROOT_PATH/bin/targets/$DEVICE_TARGET/$DEVICE_SUBTARGET
           echo "FIRMWARE_PATH=$PWD" >> $GITHUB_ENV
           rm -rf packages
@@ -422,7 +417,7 @@ jobs:
         uses: ncipollo/release-action@v1.8.0
         if: env.FIRMWARE_RELEASE_UPLOAD == 'true'
         with:
-          name: openwrt-${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}-${{ env.BUILD_DATE }}
+          name: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}-${{ env.BUILD_DATE }}
           allowUpdates: true
           replacesArtifacts: true
           tag: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}
