--- a/.github/workflows/ImmortalWrt_1806_X86-64_bak.yml
+++ b/.github/workflows/ImmortalWrt_1806_X86-64_bak.yml
@@ -285,7 +285,9 @@ jobs:
 
       - name: Install Feeds
         run: |
+          chmod +x $DIY1_SH
           cd $OPENWRT_ROOT_PATH
+          $GITHUB_WORKSPACE/$DIY1_SH
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
